deprecation-fix: replace constructor Double(double value)
-> Double.valueOf(double)